# cw_4_oop

./: .flake8  pyproject.toml
data/: id_list.txt  vac1.json  vac2.json  vac3.json  vac4.json  vacancies.json
src/: get_top_vacancies.py  hh_api.py  parser.py  utils.py  vacancy.py  work_with_files.py  work_with_json.py
tests/: test_get_top_vacancies.py  test_vacancy.py  test_work_with_json.py
