[tool.poetry]
name = "cource work 2"
version = "0.1.0"
description = ""
authors = ["Irina Polevaya <mirwen@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
lnt = "^1.1.1"
black = "^24.8.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"


[tool.poetry.group.lint.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool_black]
line-length = 119
exclude = """
(
  /(
    | .git          # в корне проекта
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
"""

[tool_isort]
line-length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
